[package]
name = "ppkg"
version = "0.1.0"
authors = ["ValleyKnight <ValleyKnight@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
compress-tools = "0.8.0"
reqwest = { version = "0.10.10", features = ["blocking"] }
serde = "1.0.118"
serde_derive = "1.0.118"
toml = "0.5.8"
